app/assets/stylesheets/leaderboard.css.scss
@import "bootstrap";
@import "mixins";
@import "variables";

$flappy-bg: #D1E9F6;
$flappy-font: #0051BB;

$traffic-bg: #C4E169;
$traffic-font: #8DA339;

$falldown-bg: #a2a2a2;
$falldown-font: #FEE2C7;

#leaderboard--flappy-pilot {
  background-color: $flappy-bg;
  background-image: none;

  .leaderboard-nav {
    background: $flappy-font;
  }

  .cat-title {
      color: $flappy-font;
      &.active {
        background: $flappy-font;
        color: $white;
      }
  }

  .leaderboard__cat {
      border: 2px solid $flappy-font;
  }

  .leaderboard-row {
    color: $flappy-font;
  }
}

#leaderboard--traffic {
 background-color: $traffic-bg;
 background-image: none;

  .leaderboard-nav {
    background: $traffic-font;
  }

  .cat-title {
      color: $traffic-font;
      &.active {
        background: $traffic-font;
        color: $white;
      }
  }

  .leaderboard__cat {
      border: 2px solid $traffic-font;
  }

  .leaderboard-row {
    color: $white;
  }
}

#leaderboard--fall-down {
 background-color: $falldown-bg;
 background-image: none;

  .leaderboard-nav {
    background: $falldown-font;
    // .leaderboard-back,
    // .leaderboard__title {
    //   color: $falldown-bg;
    // }
  }

  .cat-title {
      color: $falldown-font;
      &.active {
        background: $falldown-font;
        color: $falldown-bg;
      }
  }

  .leaderboard__cat {
      border: 2px solid $falldown-font;
  }

  .leaderboard-row {
    color: $white;
  }
}

.leaderboard-page {
  .mobile-container {
    background-color: $white;
    background-image: none;
  }
  .mobile-header {
    display: none;
  }
}
.leaderboard-nav {
  padding: 10px 0;
  background: $orange;
  height: 40px;
  margin-bottom: 20px;
  position: relative;
}
.leaderboader-head__icon {
  border: 1px solid $black;
  border-radius: 100%;
  padding: 10px;
  font-size: 18px;
  float: left;
  position: relative;
  top: 7.5px;
}
.leaderboard__title {
  margin: 0;
  font-size: 20px;
  color: $white;
}
.leaderboard__subtitle {
  text-align: center;
  font-size: 12px;
  color: $clouds;
  margin-bottom: 20px;
}
.leaderboard__cat-wrapper {
  text-align: center;
}
.leaderboard__cat {
    display: inline-block;
    width: 80%;
    margin: 0 auto 10px;
    text-align: center;
    border: 2px solid $orange;
    border-radius: 2px;
}
.cat-title {
    font-size: 14px;
    padding: 5px 5%;
    margin: 0;
    display: inline-block;
    color: $black;
    width: 40%;
    &:hover {
      cursor: pointer;
    }
    &.active {
      background: $orange;
      color: $white;
    }
}
.cat-title:first-child {
  float: left;
}
.cat-title:last-child {
  float: right;
}
.tab-section {
  &.hidden {
    display: none;
  }
}
// Leaderboard Category
.leaderboard--weekly {

}
.leaderboard-row {
  color: $black;
  border-bottom: 1px solid $clouds;
  margin: 10px 10%;
  padding: 0 5px   10px;
  &:last-child {
    border-bottom: none;
  }
  span {
    display: inline-block;
    width: 33.33%;
  }
}
.leaderboard-rank {
  float: left;
  text-align: left;
}
.leaderboard-user {
  text-align: center;
}
.leaderboard-score {
  float: right;
  text-align: right;
}
.leaderboard-back {
  position: absolute;
  color: $white;
  top: 16px;
  left: 10px;
  &:hover {
    text-decoration: none;
    color: $white;
  }
  .fa {
    font-size: 28px;
    position:relative;
    margin-right: 5px;
  }
}

